integrate latest state filter in NiFi ldes client processor